--- a/static/css/summon.css
+++ b/static/css/summon.css
@@ -3,6 +3,12 @@
 :root {
     --font: "fredoka";
     --faint-pee: #fff5b2;
+    --dark-pee: #f7edae;
+    --darker-pee: #e8dea0;
+    --brown: #40290b;
+    --dark-gray: rgb(0, 0, 0, 0.5); /* #404040 */
+    --light-gradient-blue: #ccf3ff;
+    --dark-gradient-blue: #8ae3ff;
 }
 
 body {
@@ -17,7 +23,7 @@ body {
 
 div#wrapper-div {
     opacity: 0;
-    transition: 1s linear;
+    transition: 0.5s linear;
 }
 
 div#wrapper-div.active {
@@ -29,8 +35,8 @@ div#background-div {
     display: block;
     width: 100%;
     height: 100%;
-    background-color: #fff5b2;
-    background-image:  linear-gradient(#f7edae 2.9000000000000004px, transparent 2.9000000000000004px), linear-gradient(to right, #f7edae 2.9000000000000004px, #fff5b2 2.9000000000000004px);
+    background: var(--faint-pee);
+    background-image: linear-gradient(var(--dark-pee) 3px, transparent 3px), linear-gradient(to right, var(--dark-pee) 3px, var(--faint-pee) 3px);
     background-size: 58px 58px;
 }
 
@@ -38,24 +44,29 @@ button.cat-button {
     position: absolute;
     display: block;
     width: 200px;
-    top: 85vh;
-    margin: 0;
+    top: 83vh;
     padding: 5px 10px 5px 10px;
     font: 35px var(--font);
-    background: rgba(255, 255, 255, 0.5);
-    border: solid 2px rgba(46, 46, 46, 0.5); /* #2e2e2e */
-    border-radius: 10px;
+    color: var(--brown);
+    border: 2px solid var(--dark-gray);
+    transition: 0.2s;
+}
+
+button.cat-button:hover {
+    color: white;
 }
 
 button.cat-button.adopt {
     transform: translate(-100%, 0);
     left: 48vw;
-    transition: 0.2s;
+    background: linear-gradient(to right, var(--light-gradient-blue) , var(--dark-gradient-blue));
+    border-radius: 50px 10px 10px 50px;
 }
 
 button.cat-button.abandon {
     left: 52vw;
-    transition: 0.2s;
+    background: linear-gradient(to right, var(--dark-gradient-blue), var(--light-gradient-blue));
+    border-radius: 10px 50px 50px 10px;
 }
 
 div#cat-div {
@@ -73,19 +84,40 @@ div#cat-div.horizontal {
 img#cat-img {
     position: static;
     display: block;
-    height: 400px;
+    border: 5px solid var(--darker-pee);
+    border-radius: 5px;
 }
 
 img#cat-img.horizontal {
-    margin: 75px 0 0 0;
+    height: 400px;
 }
 
 img#cat-img.vertical {
-    height: 550px;
-    margin: 0 75px 0 0;
+    height: 500px;
 }
 
-div#wisdom-div {
+div#triangle-div {
+    position: relative;
+    display: block;
+    width: 0;
+    height: 0;
+}
+
+div#triangle-div.horizontal {
+    left: 1.5vw;
+    border-top: 50px solid var(--dark-gray);
+    border-right: 15px solid transparent;
+    border-left: 15px solid transparent;
+}
+
+div#triangle-div.vertical {
+    top: 1vw;
+    border-top: 15px solid transparent;
+    border-right: 50px solid var(--dark-gray);
+    border-bottom: 15px solid transparent;
+}
+
+div#speech-div {
     position: static;
     display: block;
     width: fit-content;
@@ -94,6 +126,7 @@ div#wisdom-div {
     font: 20px var(--font);
     text-align: left;
     align-items: center;
-    background-color: white;
-    border-radius: 10px;
+    color: white;
+    background-color: var(--dark-gray);
+    border-radius: 15px;
 }
