--- a/static/css/summon.css
+++ b/static/css/summon.css
@@ -40,35 +40,6 @@ div#background-div {
     background-size: 58px 58px;
 }
 
-button.cat-button {
-    position: absolute;
-    display: block;
-    width: 200px;
-    top: 83vh;
-    padding: 5px 10px 5px 10px;
-    font: 35px var(--font);
-    color: var(--brown);
-    border: 2px solid var(--dark-gray);
-    transition: 0.2s;
-}
-
-button.cat-button:hover {
-    color: white;
-}
-
-button.cat-button.adopt {
-    transform: translate(-100%, 0);
-    left: 48vw;
-    background: linear-gradient(to right, var(--light-gradient-blue) , var(--dark-gradient-blue));
-    border-radius: 50px 10px 10px 50px;
-}
-
-button.cat-button.abandon {
-    left: 52vw;
-    background: linear-gradient(to right, var(--dark-gradient-blue), var(--light-gradient-blue));
-    border-radius: 10px 50px 50px 10px;
-}
-
 div#cat-div {
     position: absolute;
     display: flex;
@@ -129,4 +100,101 @@ div#speech-div {
     color: white;
     background-color: var(--dark-gray);
     border-radius: 15px;
+}
+
+button.cat-button {
+    position: absolute;
+    display: block;
+    width: 200px;
+    top: 83vh;
+    padding: 5px 10px 5px 10px;
+    font: 35px var(--font);
+    color: var(--brown);
+    border: 2px solid var(--dark-gray);
+    transition: 0.2s;
+}
+
+button.cat-button:hover {
+    color: white;
+}
+
+button.cat-button.adopt {
+    transform: translate(-100%, 0);
+    left: 48vw;
+    background: linear-gradient(to right, var(--light-gradient-blue) , var(--dark-gradient-blue));
+    border-radius: 50px 10px 10px 50px;
+}
+
+button.cat-button.abandon {
+    left: 52vw;
+    background: linear-gradient(to right, var(--dark-gradient-blue), var(--light-gradient-blue));
+    border-radius: 10px 50px 50px 10px;
+}
+
+div#naming-div {
+    position: absolute;
+    display: none;
+    width: 100%;
+    transform: translate(-50%, 0);
+    top: 85vh;
+    left: 50vw;
+}
+
+h1#naming-text {
+    position: absolute;
+    display: block;
+    transform: translate(-50%, 0);
+    top: -8vh;
+    left: 50vw;
+    font: 25px var(--font);
+    color: var(--brown);
+}
+
+input#naming-input {
+    position: absolute;
+    display: block;
+    width: 400px;
+    height: 30px;
+    transform: translate(-50%, 0);
+    left: 50%;
+    font: 20px var(--font);
+    border: 2px solid var(--dark-gray);
+}
+
+button.naming-button {
+    position: absolute;
+    display: block;
+    width: 100px;
+    padding: 5px 10px 5px 10px;
+    font: 20px var(--font);
+    color: var(--brown);
+    border: 2px solid var(--dark-gray);
+    transition: 0.2s;
+}
+
+button.naming-button:hover {
+    color: white;
+}
+
+button.naming-button.back {
+    transform: translate(-100%, 0);
+    left: 35vw;
+    background: linear-gradient(to right, var(--light-gradient-blue) , var(--dark-gradient-blue));
+    border-radius: 50px 10px 10px 50px;
+}
+
+button.naming-button.ok {
+    left: 65vw;
+    background: linear-gradient(to right, var(--dark-gradient-blue), var(--light-gradient-blue));
+    border-radius: 10px 50px 50px 10px;
+}
+
+p#validation-p {
+    position: absolute;
+    display: none;
+    transform: translate(-50%, 0);
+    top: 3vh;
+    left: 50vw;
+    font: 20px var(--font);
+    color: red
 }
