--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block head %}
 
 <!-- each page will now have its own style sheet -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 
 <title>Wise Cat Café</title>
 
