--- a/static/css/summon.css
+++ b/static/css/summon.css
@@ -1,25 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
-
-:root {
-    --font: "fredoka";
-    --faint-pee: #fff5b2;
-    --dark-pee: #f7edae;
-    --darker-pee: #e8dea0;
-    --brown: #40290b;
-    --dark-gray: rgb(0, 0, 0, 0.5); /* #404040 */
-    --light-gradient-blue: #ccf3ff;
-    --dark-gradient-blue: #8ae3ff;
-}
-
-body {
-    overflow: hidden; /*no scroll*/
-    margin: 0;
-    background: var(--faint-pee);
-}
-
-/* div {
-    border: solid 2px red;
-} */
+@import url("base.css");
 
 div#wrapper-div {
     opacity: 0;
