--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,8 @@ on every page
     --dark-pee: #f7edae;
     --darker-pee: #e8dea0;
     --brown: #40290b;
+    --translucent-gray: rgba(255, 255, 255, 0.5);
+    --translucent-dark-gray: rgba(46, 46, 46, 0.5); /* #2e2e2e */
     --dark-gray: rgb(0, 0, 0, 0.5); /* #404040 */
     --light-gradient-blue: #ccf3ff;
     --dark-gradient-blue: #8ae3ff;
@@ -25,53 +27,53 @@ body {
     background: var(--faint-pee);
 }
 
-button.login-button {
+button#login-button {
     position: absolute;
-    display: block;
-    top: 2vh;
-    left: 1vw;
-    background: rgba(255, 255, 255, 0.5);
-    border: none;
+    display: flex;
+    top: 1.3vh;
+    right: 0.5vw;
+    padding: 5px 5px 5px 5px;
+    background: var(--translucent-gray);
+    border: solid 2px var(--translucent-dark-gray);
     border-radius: 10px;
     transition: 0.2s;
 }
 
-button.login-button:hover {
+button#login-button:hover {
     background: white;
 }
 
-img.login-img {
-    position: static;
-    display: inline-block;
-    width: 2.3vw;
-    padding: 8px 0 0 5px;
-}
-
-h1.login-h1 {
+img#login-img {
     position: relative;
     display: inline-block;
-    top: -0.55vh;
+    width: 2vw;
+    height: 2vw;
+}
+
+h1#login-h1 {
+    position: relative;
+    display: inline-block;
     margin: 0;
-    padding: 0 10px 0 0;
-    font: 30px "capriola";
+    padding: 0 5px 0 5px;
+    font: 25px var(--font);
     color: #2e2e2e;
 }
 
-button.logout-button {
+button#logout-button {
     position: absolute;
-    display: block;
-    top: 9.5vh;
-    left: 1vw;
+    display: flex;
+    top: 8vh;
+    right: 0.5vw;
     margin: 0;
-    padding: 5px 10px 5px 10px;
-    font: 20px "capriola";
+    padding: 5px 8px 5px 8px;
+    font: 18px var(--font);
     color: #1A1A2E;
-    background: rgba(255, 255, 255, 0.5);
-    border: solid 2px rgba(46, 46, 46, 0.5); /* #2e2e2e */
+    background: var(--translucent-gray);
+    border: solid 2px var(--translucent-dark-gray);
     border-radius: 8px;
     transition: 0.2s;
 }
 
-button.logout-button:hover {
+button#logout-button:hover {
     background: white;
 }
